--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -15,4 +15,8 @@ logging.level.org.hibernate.persister.entity=ERROR
 # User properties
 domain.user.properties.default-role=USER
 domain.user.properties.active-by-default=true
+spring.main.allow-circular-references=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
