--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -16,6 +16,14 @@ logging.level.org.hibernate.persister.entity=ERROR
 domain.user.properties.default-role=USER
 domain.user.properties.active-by-default=true
 
-spring.jpa.properties.hibernate.format_sql=true
+# Internationalization
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
+
+# Logging
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.file.name=logs/application.log
+spring.main.allow-bean-definition-overriding=true
 
 
