--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -16,3 +16,8 @@ logging.level.org.hibernate.persister.entity=ERROR
 domain.user.properties.default-role=USER
 domain.user.properties.active-by-default=true
 
+spring.security.user.name=siu
+spring.security.user.password=86421357
+spring.main.allow-bean-definition-overriding=true
+
+
