--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -19,5 +19,11 @@ domain.user.properties.active-by-default=true
 spring.security.user.name=siu
 spring.security.user.password=86421357
 spring.main.allow-bean-definition-overriding=true
+# Example configuration for Gmail SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=example@gmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
