Adding Cloudinary function

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -15,5 +15,10 @@ logging.level.org.hibernate.persister.entity=ERROR
 # User properties
 domain.user.properties.default-role=USER
 domain.user.properties.active-by-default=true
+# Cloudinary config
+cloudinary.cloud-name=your-cloud-name
+cloudinary.api-key=your-api-key
+cloudinary.api-secret=your-api-secret
+
 
 
