--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -17,9 +17,9 @@ domain.user.properties.default-role=USER
 domain.user.properties.active-by-default=true
 
 # Cloudinary config
-cloudinary.cloud-name=your-cloud-name
-cloudinary.api-key=your-api-key
-cloudinary.api-secret=your-api-secret
+cloudinary.cloud-name=Siu
+cloudinary.api-key=api-key
+cloudinary.api-secret=secret
 
-
-
+# Notifications
+notification-svc.failure-message.clear-history=Notification service is temporary down! Please try again later!
