--- a/app/pom.xml
+++ b/app/pom.xml
@@ -57,7 +57,17 @@
             <artifactId>cloudinary-http44</artifactId>
             <version>1.37.0</version>
         </dependency>
-
+        <!-- SockJS & STOMP -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>sockjs-client</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>stomp-websocket</artifactId>
+            <version>2.3.4</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
